modified:   IPython/Regularization.ipynb

--- a/IPython/LinearRegression_1_ML_Exercise1.py.ipynb
+++ b/IPython/LinearRegression_1_ML_Exercise1.py.ipynb
@@ -62,7 +62,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -75,7 +77,9 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "path  = os.getcwd() + '\\..\\data\\ex1data1.txt'"
@@ -84,7 +88,9 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = pd.read_csv(path, header=None, names=['Population','Profit'])"
@@ -683,7 +689,7 @@
     "            temp[0,j] = theta[0,j] - ((alpha/m) *  np.sum(midterm))\n",
     "        theta = temp\n",
     "        costlist[i] = get_cost(X, y, theta)\n",
-    "    return costlist , theta        "
+    "    return costlist , theta"
    ]
   },
   {
