--- a/IPython/Regularization.ipynb
+++ b/IPython/Regularization.ipynb
@@ -371,7 +371,7 @@
     "y = np.array(y.values)\n",
     "theta = np.zeros(11)\n",
     "\n",
-    "#Regularization saves us from Overfitting. If reagularization_parameter is much bigge than function will be underfitted.\n",
+    "#Regularization saves us from Overfitting. If reagularization_parameter is much bigger \n #then function will be underfitted.\n",
     "reagularization_parameter = 1\n",
     "\n",
     "print(get_regularized_cost(theta, X, y,  reagularization_parameter))\n",
